[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "easy-toolkit"
version = "v0.1.0"
description = "Async executors, Playwright automation, proxy pool and HTTP client toolkit"
requires-python = ">=3.9"

dependencies = [
    "requests>=2.28",
    "playwright>=1.40",
]

[tool.setuptools.packages.find]
where = ["."]
